# httpmcp-rust

./: .gitignore  AI_CONTEXT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: endpoint_example.rs  full_server.rs  multipart_upload.rs  simple_server.rs  travel_planner.rs  travel_planner_test.sh
src/: context.rs  error.rs  handler_types.rs  jsonrpc.rs  lib.rs  metadata.rs  protocol.rs  server.rs  transport.rs
src/auth/: mod.rs  oauth.rs
src/handlers/: lifecycle.rs  mod.rs  prompts.rs  resources.rs  tools.rs
src/middleware/: mod.rs
src/sse/: mod.rs  stream.rs
tests/: integration_test.rs
